# animal-sounds

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini  tutorial.md
.github/workflows/: python-package.yml
bioacoustics/: __init__.py
bioacoustics/1_wav_processing/: README.md  raven_to_wav.py
bioacoustics/2_feature_extraction/: LLD.py  README.md  extract_features_dl.py  main.py  rasta.py  run.sh
bioacoustics/2_wav_processing/: raven_to_wav.py
bioacoustics/3_classifier/: README.md  data_preparation_dl.py  data_preparation_svm.py  data_prepration.py  data_prepration_svm.py  predict.py  predict_svm.sh  preprocess_old.py  svm_results.ipynb  train.py  train_svm.sh
bioacoustics/4_feature_extraction/: LLD.py  run.sh  tools.py
bioacoustics/4_prediction/: create_sanaga_evaluation_set.ipynb  proces.ipynb
bioacoustics/5_classifier/: preprocess.py  svm_results.ipynb
bioacoustics/classifier/: data_preparation_dl.py  data_preparation_svm.py  data_prepration_svm.py  predict.py  train.py  train.sh
bioacoustics/feature_extraction/: README.md  extract_features_dl.py  extract_features_svm.py  run_dl.sh  run_svm.sh  test_run.sh
bioacoustics/wav_processing/: README.md
docs/: README.rst  conf.py  tutorial.md
docs/source/: bioacoustics.classifier.hyperparameter_optimization.rst  bioacoustics.classifier.model.rst  bioacoustics.classifier.rst  bioacoustics.feature_extraction.acoustic_features.rst  bioacoustics.feature_extraction.rst  bioacoustics.rst  bioacoustics.wav_processing.chunk_wav.rst  bioacoustics.wav_processing.condensation.rst  bioacoustics.wav_processing.raven_to_wav.rst  bioacoustics.wav_processing.rst  bioacoustics.wav_processing.synthetic_data.rst  conf.py  index.rst  modules.rst
output/notebooks/: jupyterhub.sqlite  jupyterhub_cookie_secret  model_analysis.ipynb  svm_results.ipynb
results/notebooks/: svm_results.ipynb
src/1_condensation/: README.md  extract.py
src/4_feature_extraction/: features.py  featuresFunctions.py  main.py  speech_features.py
test_data/condensed_files/: timestamps.csv
(+79 files in other folders)
