[tool.poetry]
name = "chimpanzee-classifier"
version = "0.1.0"
description = "Package for detecting chimpanzee vocalizations"
authors = ["UU Research Engineerieam <research.engineering@uu.nl>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "bioacoustics"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.0"
scikit-learn = ">=0.19.1"
tensorflow = "^2.10.1"
librosa = "^0.9.2"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
spectrum = "^0.8.1"
aiofiles = "^22.1.0"
sympy = "^1.11.1"
soundfile = "^0.11.0"
pydub = "^0.25.1"
sphinx = "^5.3.0"
llvmlite = "^0.39.1"
numba = "^0.56.4"
sphinx-rtd-theme = "^1.1.1"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 99

[tool.flake8]
ignore = ['E203', 'E402', 'W503']
max-line-length = 99
per-file-ignores = [
    'bioacoustics/__init__.py:F401,F403 bioacoustics/feature_extraction/acoustic_features/features.py:F405',
]
