[project]
name = "animal-sounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "ibridges>=1.5.1",
    "ibridgesgui>=1.5.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydub>=0.25.1",
    "scikit-learn>=1.7.0",
    "soundfile>=0.13.1",
    "spectrum>=0.9.0",
]
