[project]
name = "bioacoustics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "ibridges>=1.5.1",
    "ibridgesgui>=1.5.1",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydub>=0.25.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "soundfile>=0.13.1",
    "spectrum>=0.9.0",
]

[tool.setuptools]
py-modules = []
